# spring-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/common/: Cargo.toml
crates/common/src/: access.rs  common.rs  domain.rs  set.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: kick.rs  message.rs  metadata.rs  motd.rs  packet.rs  ping.rs  protocol.rs  sniff.rs
crates/spring/: Cargo.toml
crates/spring/src/: config.rs  lib.rs  main.rs  relay.rs  router.rs  runner.rs  service.rs  stream.rs
crates/spring/src/outbound/: minecraft.rs  mod.rs  plain.rs
crates/spring/src/outbound/minecraft/: login.rs  mod.rs  packets.rs  status.rs
crates/spring/src/route/: mod.rs  rules.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  chapter_1.md  configuration.md  development.md  introduction.md  minecraft_outbound.md  quick_start.md  rules.md
