[package]
name = "protocol"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
path = "src/protocol.rs"

[dependencies]
common.workspace = true

smol.workspace = true
async-net.workspace = true
async-io.workspace = true
bytes.workspace = true
futures-lite.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json = "1.0"

