[package]
name = "spring"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
default-run = "spring"

[lints]
workspace = true

[[bin]]
name = "spring"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
common.workspace = true

smol.workspace = true
async-net.workspace = true
async-io.workspace = true
async-channel.workspace = true
async-lock.workspace = true
futures-lite.workspace = true
bytes.workspace = true
anyhow.workspace = true
log.workspace = true
flexi_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ctrlc.workspace = true
async-trait = "0.1"
ipnet = "2.11"
